crates/common/eurora-tools-macros/tests/fail/source_browser_with_focused_target.stderr
error: source kind expects `&::eurora_tools::BrowserOrigin`, but the method declares `&FocusedOrigin`
  --> tests/fail/source_browser_with_focused_target.rs:19:17
   |
19 |         target: &FocusedOrigin,
   |                 ^^^^^^^^^^^^^^
